css/main.css
/* Base */
/* ----------------------------------------------------------*/

* {
  margin: 0;
  padding: 0;
}

html, body { height: 100%; }

body {
  font-family: Helvetica, Arial, sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 300;
  background-color: #fdfdfd;
}

h1, h2, h3, h4, h5, h6 { font-size: 100%; font-weight: 400; }

p a, li a {
  border-bottom: 1px solid #ffeeaa;
  box-shadow: inset 0 -5px 0 #ffeeaa;
  transition: background 0.15s cubic-bezier(0.33, 0.66, 0.66, 1);
}
a { color: #aa0000; text-decoration: none; }
p a:hover, li a:hover { background-color: #ffeeaa; text-decoration: none; }
a:hover   { color: #aa0000; text-decoration: underline; }
a:visited { color: #aa0000; } */

/* Utility */

.wrap:before,
.wrap:after { content:""; display:table; }
.wrap:after { clear: both; }
.wrap {
  max-width: 800px;
  padding: 0 30px;
  margin: 0 auto;
  zoom: 1;
}


/* Layout Styles */
/* ----------------------------------------------------------*/

/* Site header */

.site-header {
  border-top: 5px solid #333;
  border-bottom: 1px solid #e8e8e8;
  min-height: 56px;
  background-color: white;
}

.site-title,
.site-title:hover,
.site-title:visited {
  display: block;
  color: #333;
  font-size: 26px;
  letter-spacing: -1px;
  float: left;
  line-height: 56px;
  position: relative;
  z-index: 1;
}

.site-nav {
  float: right;
  line-height: 56px;
}

.site-nav .menu-icon { display: none; }

.site-nav .page-link {
  margin-left: 20px;
  color: #727272;
  letter-spacing: -.5px;
}

/* Site footer */

.site-footer {
  border-top: 1px solid #e8e8e8;
  padding: 30px 0;
}

.footer-heading {
  font-size: 18px;
  font-weight: 300;
  letter-spacing: -.5px;
  margin-bottom: 15px;
}

.site-footer .column { float: left; margin-bottom: 15px; }

.footer-col-1 {
  width: 270px; /*fallback*/
  width: -webkit-calc(35% - 10px);
  width: -moz-calc(35% - 10px);
  width: -o-calc(35% - 10px);
  width: calc(35% - 10px);
  margin-right: 10px
}
.footer-col-2 {
  width: 175px; /*fallback*/
  width: -webkit-calc(23.125% - 10px);
  width: -moz-calc(23.125% - 10px);
  width: -o-calc(23.125% - 10px);
  width: calc(23.125% - 10px);
  margin-right: 10px
}
.footer-col-3 {
  width: 335px; /*fallback*/
  width: -webkit-calc(41.875%);
  width: -moz-calc(41.875%);
  width: -o-calc(41.875%);
  width: calc(41.875%);
}

.site-footer ul {
  list-style: none;
  margin-bottom: 10px;
}

.site-footer li,
.site-footer p {
  font-size: 15px;
  letter-spacing: -.3px;
  color: #828282;
}

.site-footer .icon i {
  font-size: 1.2em;
  color: #C2C2C2;
}


/* Page Content styles */
/* ----------------------------------------------------------*/

.page-content {
  padding: 30px 0;
  background-color: #fff;
}

.page-content .icon i {
  font-size: 1.2em;
  color: #C2C2C2;
}

/* Home styles */
/* ----------------------------------------------------------*/

.home h1 { margin-bottom: 25px; }

.posts { list-style-type: none; }

.posts li { margin-bottom: 30px; }

.posts .post-link {
  font-size: 24px;
  letter-spacing: -1px;
  line-height: 1;
}

.posts .post-date {
  display: block;
  font-size: 15px;
  color: #818181;
}

.wrap.home {
  max-width: none;
  display: flex;
  flex-flow: row wrap;
}

.wrap.home > div {
  width: 350px;
  min-height: 250px;
  margin-right: 30px;
  margin-bottom: 30px;
  background-image: url('/assets/tile.jpg');
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center;
  display: flex;
  flex-flow: row wrap;
  align-content: flex-end;
  align-items: flex-end;
  justify-content: flex-end;
}

.wrap.home a, .wrap.home p{
  color: #ffffff;
}

.wrap.home .invert a, .wrap.home .invert p {
  color: #333;
}

.wrap.home a, .wrap.home p {
  font-weight: bolder;
  padding: 0 0.2em 0 0.2em;
  text-align: right;
}

.wrap.home a.post-link {
  display: block;
  font-size: 1.6em;
}

.wrap.home p.post-date {
  font-size: 0.7em;
}

.subscribe-footer {
  display: flex;
  justify-content: center;
  align-items: baseline;
  align-content: center;
}

/* Post styles */
/* ----------------------------------------------------------*/

.post-header {
  margin: 10px 0 30px;
}

.post-header.post {
  color: #ffeeaa;
}

.post-header.invert {
  color: #333;
}

.page-content > .post-header {
  background-color: #0d54EE;
  margin: 0;
  padding: 10px 0 30px;
  min-height: 200px;
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center;
}

.post-header > .wrap > img, .wrap.post > img, .wrap.home > img {
  float: left;
  margin-left: -220px;
}

.post-header h1 {
  font-size: 42px;
  letter-spacing: -1.75px;
  line-height: 1;
  font-weight: 300;
}

.post-header h2 {
  font-size: 21px;
  letter-spacing: -1.75px;
  line-height: 1;
  font-weight: 100;
  margin-top: 5px;
}

.post-header .meta {
  font-size: 15px;
  margin-top: 5px;
}

.post-content { margin: 0 0 30px; }

.post-content > * { margin: 20px 0; }


.post-content h1,
.post-content h2,
.post-content h3,
.post-content h4,
.post-content h5,
.post-content h6 {
  line-height: 1;
  font-weight: 300;
  margin: 40px 0 20px;
}

.post-content h2 {
  font-size: 32px;
  letter-spacing: -1.25px;
}

.post-content h3 {
  font-size: 26px;
  letter-spacing: -1px;
}

.post-content h4 {
  font-size: 20px;
  letter-spacing: -1px;
}

.post-content blockquote {
  border-left: 4px solid #e8e8e8;
  padding-left: 20px;
  font-size: 18px;
  opacity: .6;
  letter-spacing: -1px;
  font-style: italic;
  margin: 30px 0;
}

.post-content ul,
.post-content ol { padding-left: 20px; }

.post-content img { max-width: 800px; }

.post pre,
.post code {
  border: 1px solid #d5d5e9;
  background-color: #eef;
  padding: 8px 12px;
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  border-radius: 3px;
  font-size: 15px;
  overflow: auto;
}

.post code { padding: 1px 5px; }

.post ul,
.post ol { margin-left: 1.35em; }

/* about */

.post ul.about.contact {
  list-style: none;
}

.post ul.about span.li.icon {
  margin-left: -20px;
}
/* ... */

